gitops/environments/prod/apps/dndn-hr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dndn-hr
  labels:
    app.kubernetes.io/part-of: dndn
