gitops/environments/prod/apps/dndn-hr/externalname-svc.yaml
# HR 네임스페이스에서 dndn-api 서비스에 접근하기 위한 ExternalName Service
# ALB Ingress가 cross-namespace backend를 직접 지원하지 않으므로 필요
apiVersion: v1
kind: Service
metadata:
  name: dndn-api-external
  namespace: dndn-hr
spec:
  type: ExternalName
  externalName: dndn-api.dndn-api.svc.cluster.local
  ports:
    - port: 8000
